# icloud_photos_downloader

./: .editorconfig  .gitignore  CLAUDE.md  GEMINI.md  ICLOUD_DOWNLOAD_REVIEW.md  IMPLEMENTATION_REVIEW_2026-03-05.md  README.md  cladue.md  icloudpd-gui.spec  pyproject.toml  pyrightconfig.json
app/: __init__.py  main.py
app/core/: __init__.py  config.py  i18n.py  icloudpd_runtime.py  log_parser.py  runner.py
app/i18n/: messages_en.qm  messages_en.ts  messages_ko.qm  messages_ko.ts
app/storage/: __init__.py  settings_store.py
app/ui/: __init__.py  info_view.py  logs_view.py  main_window.py  no_wheel_input.py  run_view.py  settings_view.py
scripts/: build.py  check_utf8.py
tests/: test_config.py  test_i18n.py  test_icloudpd_runtime.py  test_log_parser.py  test_runner_lifecycle.py  test_runner_resolution.py  test_settings_store.py  test_ui_views.py
