[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icloudpd-gui"
version = "0.1.0"
description = "PySide6 desktop GUI wrapper for icloudpd"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "icloudpd-gui contributors" }]
dependencies = [
    "PySide6>=6.7,<7",
    "pyqtdarktheme>=0.1.7,<1",
    "icloudpd>=1.32.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pyinstaller>=6,<7",
    "pyright>=1.1.408,<2",
]

[project.scripts]
icloudpd-gui = "app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.i18n" = ["*.ts", "*.qm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
